# paracrine

./: .gitignore  .pre-commit-config.yaml  .tool-versions  MANIFEST.in  Makefile  README.md  constraints.txt  pyproject.toml  requirements.in  requirements.txt
.github/: renovate.json5
.github/workflows/: ci.yml
docs/: aws.html  certs.html  config.html  core.html  debian.html  deps.html  fs.html  index.html  login.html  network.html  python.html  reboot.html  runner.html  setup.html  systemd.html  users.html  wireguard.html
docs/commands/: index.html  login.html  setup.html
docs/helpers/: config.html  cron.html  fs.html  index.html  users.html
docs/paracrine/: deps.html
docs/paracrine/commands/: reboot.html
docs/paracrine/helpers/: debian.html  network.html  python.html  systemd.html
docs/paracrine/runners/: aws.html
docs/paracrine/services/: ntp.html  pleroma.html
docs/runners/: certs.html  core.html  index.html
docs/services/: index.html  pleroma.html  postgresql.html  wireguard.html
docs/services/cockroachdb/: certs.html  common.html  node.html
docs/services/redis/: check_master.html  common.html  index.html  wipe_old_master.html
docs/services/wireguard/: core.html  index.html
integration_test/: Dockerfile.basic  Vagrantfile  config.yaml  docker-compose.yml  main.py  pleroma.py  systemctl.py
integration_test/docker/: inventory.yaml
integration_test/docker/configs/: .gitignore  test_key  test_key.pub
integration_test/templates/: config.exs.j2  pleroma.nginx.j2  setup_db.psql.j2
integration_test/vagrant/: .gitignore  inventory.yaml
paracrine/: __init__.py  apt.py  aws.py  bootstrap.py  certs.py  config.py  core.py  cron.py  debian.py  deps.py  fs.py  login.py  main.py  network.py  python.py  reboot.py  repos.py  runner.py  setup.py  systemd.py  users.py  wireguard.py
paracrine/commands/: login.py  python_wrapper.sh  reboot.py  setup.py  sftp.py
paracrine/helpers/: config.py  cron.py  debian.py  fs.py  network.py  python.py  systemd.py  users.py
paracrine/runners/: aws.py  certs.py  core.py  diskfree.py
paracrine/services/: cockroachdb.py  ntp.py  pleroma.py  postgresql.py  wireguard.py
paracrine/services/cockroachdb/: README.md  __init__.py  certs.py  common.py  init.py  node.py
paracrine/services/kernel/: __init__.py  common.py  do_upgrade.py  needs_upgrade.py
paracrine/services/redis/: README.md  __init__.py  (+5 more)
paracrine/templates/: certbot_requirements.txt  cockroach.service.j2  config.exs.j2  cron.j2  pleroma.nginx.j2  redis-sentinel.conf.j2  redis.conf.j2  setup_db.psql.j2  wg.conf.j2
tests/: conftest.py  test_core.py  test_dependencies.py  test_runner.py  test_ssh.py
typings/: callee.pyi
typings/mergedeep/: __init__.pyi  mergedeep.pyi
typings/mitogen/: core.pyi  parent.pyi  ssh.pyi  utils.pyi
typings/urllib3/: __init__.pyi
(+10 files in other folders)
