[project]
name = "paracrine"
version = "0.2.1"
authors = [
  { name="Tom Parker-Shemilt", email="palfrey@tevp.net" },
]
description = "A system deployment tool"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies=[
  # FIXME: Fix for https://github.com/mitogen-hq/mitogen/issues/1398
  "mitogen @ https://github.com/mitogen-hq/mitogen/archive/b7eddf2cdb2377b46ce66d6e9300d9d1b6bc74af.zip",
  "jinja2", "pyyaml", "python-debian", "mergedeep", "retry", "requests", "frozendict", "looseversion"]

[project.urls]
"Homepage" = "https://github.com/palfrey/paracrine"
"Bug Tracker" = "https://github.com/palfrey/paracrine/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["paracrine*"]

[tool.pyright]
typeCheckingMode = "strict"
