[project]
name = "paracrine"
version = "0.2.1"
description = "A system deployment tool"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Tom Parker-Shemilt", email = "palfrey@tevp.net" }]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "frozendict",
  "jinja2",
  "looseversion",
  "mergedeep",
  "mitogen",
  "python-debian",
  "pyyaml",
  "requests",
  "retry",
]

[project.urls]
"Bug Tracker" = "https://github.com/palfrey/paracrine/issues"
"Homepage" = "https://github.com/palfrey/paracrine"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "strict"

[tool.setuptools.packages.find]
include = ["paracrine*"]
